<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bub_background"
                android:orientation="vertical" >

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/barlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttons_background"
        android:focusable="false" >

        <TextView
            android:id="@+id/positionTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:focusable="false"
            android:text="@string/game_over"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#1D4088"
            android:textSize="22sp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="109dp"
        android:text="@string/your_score"
        android:textColor="#0f988a"
        android:textSize="22sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="210dp"
        android:text="@string/high_score"
        android:textSize="22sp"
        android:textColor="#0f988a"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/highscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/zero"
        android:textColor="#1D4088"
        android:textSize="25sp"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/HighScoreTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/barlayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:focusable="false"
        android:text="@string/high_score"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#f75625"
        android:textSize="22sp" />
    <TextView
        android:id="@+id/yourscore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="22dp"
        android:text="@string/zero"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1D4088"
        android:textSize="25sp" />

    <Button
        android:id="@+id/button1"
        android:layout_width="130dp"
        android:layout_height="35dp"
        android:layout_below="@+id/highscore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="@drawable/buttons_background"
        android:text="@string/retry"
        android:textColor="@drawable/button_color"
        android:textSize="20sp" />

</RelativeLayout>